fix(accounts): make QR code white/black even in dark mode
Some QR scanners have issues with color scheme used in the dark mode, so
use standard colors for the QR code there for improved compatibility.

Fixes #12359

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -2054,3 +2054,12 @@ tbody.warning {
   margin: 8px 0;
   display: inline-block;
 }
+
+.totp-qr svg {
+  margin: auto;
+  background: #fff;
+  display: block;
+}
+.totp-qr svg path {
+  fill: black !important;
+}
